--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
+    <!-- icon -->
+    <script src="//at.alicdn.com/t/font_2503709_f4q9dl3hktl.js"></script>
     <title>极客园</title>
   </head>
   <body>
